booking master need to be completed

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "node server.js"
   },
   "keywords": [
-    "mmt"
+    "mmt",
+    "tourism",
+    "travel"
   ],
   "author": "sridhar",
   "license": "ISC",
